--- a/books/Storyboards/Settings.storyboard
+++ b/books/Storyboards/Settings.storyboard
@@ -14,8 +14,8 @@
         <scene sceneID="6oe-kw-5ew">
             <objects>
                 <navigationController id="vFY-Rx-QFE" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zmS-aV-cxq">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="zmS-aV-cxq">
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -46,7 +46,7 @@
             <objects>
                 <navigationController id="stP-Vs-oLA" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sOY-Xc-dL4">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -70,7 +70,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Sort" id="o9V-XK-PPB"/>
+                    <navigationItem key="navigationItem" title="Sort" largeTitleDisplayMode="never" id="o9V-XK-PPB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zE1-pZ-QwF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -81,7 +81,7 @@
             <objects>
                 <navigationController id="R7D-Jc-uwA" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZqJ-tU-PPu">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -171,7 +171,7 @@
                             <outlet property="delegate" destination="cE8-jq-0ch" id="8l6-dM-rr5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Data" id="0ao-jX-TXZ"/>
+                    <navigationItem key="navigationItem" title="Data" largeTitleDisplayMode="never" id="0ao-jX-TXZ"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RmO-MQ-lf1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -505,7 +505,7 @@
                             <outlet property="delegate" destination="IOC-QW-2ti" id="DSw-aF-iyz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="About" id="ttt-TN-shv"/>
+                    <navigationItem key="navigationItem" title="About" largeTitleDisplayMode="never" id="ttt-TN-shv"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H4I-Uv-8g9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -558,7 +558,7 @@
                             <outlet property="delegate" destination="i1l-D8-1H7" id="3VX-eF-f9p"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="General" id="2vv-fM-nVD"/>
+                    <navigationItem key="navigationItem" title="General" largeTitleDisplayMode="never" id="2vv-fM-nVD"/>
                     <connections>
                         <outlet property="useLargeTitlesSwitch" destination="pWc-3k-6ih" id="vjb-id-BbJ"/>
                     </connections>
@@ -572,7 +572,7 @@
             <objects>
                 <navigationController id="nOW-Xg-Zd7" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y9f-b0-LQ6">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -588,7 +588,7 @@
             <objects>
                 <navigationController id="LPf-H4-Q9r" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ysp-6p-Ma6">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -856,7 +856,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                             <outlet property="delegate" destination="lmv-Mv-DqW" id="FYT-c3-mqr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Privacy" id="geW-9p-oPa"/>
+                    <navigationItem key="navigationItem" title="Privacy" largeTitleDisplayMode="never" id="geW-9p-oPa"/>
                     <connections>
                         <outlet property="sendAnalyticsSwitch" destination="rHC-wV-9Uf" id="KRg-P5-smp"/>
                     </connections>
@@ -889,7 +889,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <objects>
                 <navigationController id="cDo-pJ-Vw0" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eHx-Jh-Fw9">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -905,7 +905,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <objects>
                 <navigationController id="DtC-Ho-Zzw" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yKp-NC-DEr">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -929,7 +929,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Debug" id="khI-0X-VjJ"/>
+                    <navigationItem key="navigationItem" title="Debug" largeTitleDisplayMode="never" id="khI-0X-VjJ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7sO-UY-kRd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
