Better iPhone X support for Scan Barcode view; disable orientation rotation while scanning barcode

--- a/books/Storyboards/ScanBarcode.storyboard
+++ b/books/Storyboards/ScanBarcode.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rYQ-41-cfc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rYQ-41-cfc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,14 +16,11 @@
         <scene sceneID="Akp-v3-3aF">
             <objects>
                 <viewController id="bN9-Cz-0Ly" customClass="CreateReadState" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="exa-sP-IHI"/>
-                        <viewControllerLayoutGuide type="bottom" id="Vw1-CO-cLc"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Nnl-Sp-Pts">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="wSz-5P-Tpp"/>
                     </view>
                     <navigationItem key="navigationItem" title="Set Read State" id="vfW-LJ-HsF">
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="VYD-1D-UjJ">
@@ -43,10 +41,6 @@
         <scene sceneID="b2c-9w-e3P">
             <objects>
                 <viewController id="MGK-ee-YjP" customClass="ScanBarcode" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="8uf-ya-Hu9"/>
-                        <viewControllerLayoutGuide type="bottom" id="za8-pr-DLM"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Li1-Bc-Q61">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -66,12 +60,13 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="VIt-na-l7a" secondAttribute="trailing" id="Ifn-HB-v19"/>
                             <constraint firstItem="VIt-na-l7a" firstAttribute="leading" secondItem="Li1-Bc-Q61" secondAttribute="leading" id="Trq-9S-fSQ"/>
-                            <constraint firstItem="za8-pr-DLM" firstAttribute="top" secondItem="VIt-na-l7a" secondAttribute="bottom" id="U2P-TF-Rsb"/>
+                            <constraint firstAttribute="bottom" secondItem="VIt-na-l7a" secondAttribute="bottom" id="U2P-TF-Rsb"/>
                             <constraint firstItem="710-zJ-iLP" firstAttribute="centerX" secondItem="VIt-na-l7a" secondAttribute="centerX" id="Xh8-sC-A2p"/>
                             <constraint firstItem="710-zJ-iLP" firstAttribute="centerY" secondItem="VIt-na-l7a" secondAttribute="centerY" id="tKA-ms-Iut"/>
                             <constraint firstItem="710-zJ-iLP" firstAttribute="width" secondItem="VIt-na-l7a" secondAttribute="width" multiplier="3:4" id="vJw-tw-9FO"/>
-                            <constraint firstItem="VIt-na-l7a" firstAttribute="top" secondItem="8uf-ya-Hu9" secondAttribute="bottom" id="wv6-dE-OPd"/>
+                            <constraint firstItem="VIt-na-l7a" firstAttribute="top" secondItem="bpp-e0-H2Y" secondAttribute="top" id="wv6-dE-OPd"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="bpp-e0-H2Y"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="C92-un-dfo"/>
                     <navigationItem key="navigationItem" title="Scan Barcode" id="UpE-wp-wNv">
@@ -92,10 +87,10 @@
             </objects>
             <point key="canvasLocation" x="-1471.2" y="-393.55322338830587"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Non Rotating Navigation Controller-->
         <scene sceneID="YJu-cP-9jM">
             <objects>
-                <navigationController id="rYQ-41-cfc" sceneMemberID="viewController">
+                <navigationController id="rYQ-41-cfc" customClass="NonRotatingNavigationController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="rHe-eY-Zk8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
